# vmaf

.github/choco/: windows-vs2022.config
.github/workflows/: docker.yml  ffmpeg.yml  libvmaf.yml  windows.yml
libvmaf/: meson.build
libvmaf/src/: log.c  meson.build
libvmaf/src/feature/: adm_tools.h  integer_vif.c  mkdirp.c
libvmaf/test/: meson.build  test_framesync.c  test_ring_buffer.c
libvmaf/tools/: vmaf.c
